[tool.poetry]
name = "play-with-python"
version = "0.1.0"
description = ""
authors = ["phanuphongk <onesa008@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
django = "^5.0.6"
ruff = "^0.4.3"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
